<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <RelativeLayout
            android:id="@+id/rellay1"
            android:layout_width="407dp"
            android:layout_height="525dp"
            android:background="@drawable/grad"
            android:paddingBottom="20dp"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.538"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">


            <RelativeLayout
                android:id="@+id/tv_image_photo"
                android:layout_width="match_parent"
                android:layout_height="138dp"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp">


                <ImageView
                    android:id="@+id/foto_user_search"
                    android:layout_width="150dp"
                    android:layout_height="147dp"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginStart="128dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="133dp"
                    android:layout_marginRight="163dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">


                </ImageView>


            </RelativeLayout>

            <TextView
                android:id="@+id/tv_name_searchs"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_image_photo"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="15sp"
                android:fontFamily="sans-serif-light"
                android:text="@string/names"
                android:textColor="@color/white"
                android:textSize="32sp" />


            <TextView
                android:id="@+id/tv_address_search"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_name_searchs"
                android:layout_centerHorizontal="true"
                android:fontFamily="sans-serif"
                android:text="@string/location"
                android:textAllCaps="true"
                android:textColor="@color/address"
                android:textSize="14sp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="199dp"
                android:layout_below="@+id/tv_name_searchs"
                android:layout_alignBottom="@+id/tv_address_search"
                android:layout_alignParentStart="true"
                android:layout_marginStart="0dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="169dp"
                android:layout_marginBottom="-212dp"
                android:layout_toStartOf="@+id/tv_name_searchs"
                android:orientation="horizontal">

            </LinearLayout>

            <RelativeLayout
                android:id="@+id/relativeLayout2"
                android:layout_width="433dp"
                android:layout_height="242dp"
                android:layout_below="@+id/tv_address_search"
                android:layout_alignParentStart="true"
                android:layout_marginStart="7dp"
                android:layout_marginTop="53dp">

                <LinearLayout
                    android:layout_width="362dp"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="30dp"
                    android:orientation="vertical">


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/repository"
                        android:textColor="@color/headings"
                        android:textSize="13sp" />

                    <TextView
                        android:id="@+id/tv_repo_search"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-light"
                        android:text="@string/valueRepository"
                        android:textColor="#000000"
                        android:textSize="18sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/username"
                        android:textColor="@color/headings"
                        android:textSize="13sp" />

                    <TextView
                        android:id="@+id/tv_username_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-light"
                        android:text="@string/valueUsername"
                        android:textColor="#000000"
                        android:textSize="18sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/company"
                        android:textColor="@color/headings"
                        android:textSize="13sp" />

                    <TextView
                        android:id="@+id/tv_company_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-light"
                        android:text="@string/valueCompany"
                        android:textColor="#000000"
                        android:textSize="18sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/followerss"
                        android:textColor="@color/headings"
                        android:textSize="13sp" />

                    <TextView
                        android:id="@+id/tv_followers_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-light"
                        android:text="@string/valueRepository"
                        android:textColor="#000000"
                        android:textSize="18sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/following"
                        android:textColor="@color/headings"
                        android:textSize="13sp" />

                    <TextView
                        android:id="@+id/tv_following_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-light"
                        android:text="@string/valuefollowers"
                        android:textColor="#000000"
                        android:textSize="18sp" />


                </LinearLayout>


            </RelativeLayout>

            <ToggleButton
                android:id="@+id/toggleButton"
                android:layout_width="38dp"
                android:layout_height="38dp"
                android:layout_below="@+id/tv_name_searchs"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="182dp"
                android:layout_marginTop="31dp"
                android:layout_marginEnd="187dp"
                android:background="@drawable/fav_togle"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:text="ToggleButton"
                android:textOff=""
                android:textOn="" />


        </RelativeLayout>


        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="372dp"
            android:layout_height="208dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rellay1"
            tools:context=".UI.MainActivity">

            <com.google.android.material.tabs.TabLayout
                android:id="@+id/tabs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/colorPrimary"
                app:tabTextColor="@android:color/white" />

            <androidx.viewpager2.widget.ViewPager2
                android:id="@+id/view_pager"
                android:layout_width="match_parent"
                android:layout_height="356dp" />


        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
